tests/test109.rael.exp
rael
Error [6:5]: 'break' has to be inside a loop
|     break
|     ^
